--- a/Web Studio/style.css
+++ b/Web Studio/style.css
@@ -15,7 +15,7 @@ button
     background-color: var(--mainblue-color);
 }
 
-.graycolor
+.gray-color
 {
     background-color: var(--main-color);
 }
@@ -27,15 +27,16 @@ button
 
 header
 {
+    display: flex;
     background-color: var(--header-color);
 }
 
 body
 {
-font-family: "Roboto";
+    font-family: "Roboto";
 }
 
-.a-hover:hover
+.header-nav-a:hover
 {
     color: var(--mainblue-color);
 }
@@ -45,8 +46,10 @@ a
     text-decoration: none;
     color:var(--a-nav-color);
 }
-.nav-header-a-style
+.header-nav-a
 {
+    
+    margin: 20px;
     width: 45px;
     height: 16px;
     left: 453px;
@@ -58,7 +61,7 @@ a
     letter-spacing: 0.02em;
 }
 
-.h1-main-font-style
+.main-section1-h1
 {
     left: 0%;
     right: 0%;
@@ -74,7 +77,7 @@ a
     color: var(--webstudio-text-all-white)
 }
 
-.button-main-text-style
+.main-section1-button
 {
     width: 152px;
     height: 30px;
@@ -104,7 +107,7 @@ ul
     list-style-type: none;
 }
 
-.font-raleway-header, .font-raleway-footer
+.header-web-studio-logo, .footer-a
 {
     font-family: "Raleway";
     width: 145px;
@@ -118,17 +121,17 @@ ul
     letter-spacing: 0.03em;
 }
 
-.font-style-webstudio
+.style-web-studio-logo
 {
     color: var(--mainblue-color)
 }
 
-.font-raleway-footer
+.footer-a
 {
     color: var(--webstudio-text-all-white) ;
 }
 
-.h4-main-text-style
+.main-section2-h4
 {
     width: 270px;
     height: 16px;
@@ -143,7 +146,7 @@ ul
     color: var(--a-nav-color);
 }
 
-.p-main-text-style
+.main-section2-p
 {
 
     width: 270px;
@@ -159,7 +162,7 @@ ul
 
 }
 
-.h2-main-text-style
+.main-h2
 {
     width: 366px;
     height: 60px;
@@ -174,7 +177,7 @@ ul
 
 }
 
-.h4-main-team-text-style
+.main-section3-h4
 {
     width: 129px;
     height: 19px;
@@ -190,7 +193,7 @@ ul
 
 }
 
-.p-main-team-text-style
+.main-section3-p
 {
  
     width: 130px;
@@ -207,7 +210,7 @@ ul
 
 }
 
-.p-footer-text-style
+.footer-p
 {
   
     width: 231px;
@@ -222,7 +225,7 @@ ul
     color: var(--webstudio-text-all-white)
 }
 
-.a-footer-text-style
+.footer-a-style
 {
 
     width: 136px;
@@ -238,7 +241,7 @@ ul
 
 }
 
-.button-main-portfolio-style
+.portfolio-main-button
 {
 
 
@@ -266,7 +269,7 @@ ul
 
 }
 
-.button-main-portfolio-style:hover
+.portfolio-main-button:hover
 {
     background-color: var(--mainblue-color);
 }
@@ -288,7 +291,7 @@ ul
 
 }
 
-.portfolio-h2-main-text-style
+.portfolio-main-h2
 {
 
     width: 322px;
@@ -304,7 +307,7 @@ ul
 
 }
 
-.portfolio-p-main-text-style
+.portfolio-main-p
 {
     width: 322px;
     height: 30px;
