--- a/Web Studio/style.css
+++ b/Web Studio/style.css
@@ -67,8 +67,15 @@ a
 {
     display: flex;
     gap: 50px;
-    padding-left: 93px ;
+    margin-bottom: 0px; 
 }
+.header-ul li
+{
+    width: 75px;
+    display: flex;
+    justify-content: center;
+}
+
 .header-ul-second
 {
     display: flex;
@@ -79,16 +86,58 @@ a
 {
     padding-top: 32px;
     padding-bottom: 32px;
-    width: 45px;
+    width: 100%;
     height: 16px;
-    left: 453px;
-    top: 32px;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;
     text-wrap: nowrap;
+    text-align: center;
+}
+
+
+
+.page-home .header-nav-a[href="index.html"]::after
+{
+    content: "";
+    display: flex;
+    justify-content: center;
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--mainblue-color);
+    margin-top: 28px;
+    margin-bottom: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.page-home .header-nav-a[href="index.html"]
+{
+    color: var(--mainblue-color);
+}
+
+.page-portfolio .header-nav-a[href="portfolio.html"]
+{
+    color: var(--mainblue-color);
+}
+
+
+.page-portfolio .header-nav-a[href="portfolio.html"]::after {
+   content: "";
+    display: flex;
+    justify-content: center;
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--mainblue-color);
+    margin-top: 28px;
+    margin-bottom: 0px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .main-section1-h1
@@ -574,10 +623,6 @@ ul
     flex-wrap: wrap;
 }
 
-.icon
-{
-  
-}
 
 .modal-input
 {
