--- a/Web Studio/style.css
+++ b/Web Studio/style.css
@@ -68,6 +68,7 @@ a
     display: flex;
     gap: 50px;
     margin-bottom: 0px; 
+    margin-top: 0px;
 }
 .header-ul li
 {
@@ -112,7 +113,7 @@ a
     margin-bottom: 0px;
     margin-left: auto;
     margin-right: auto;
-    
+    animation: appear 0.5s ease forwards;
 }
 
 .page-home .header-nav-a[href="index.html"]
@@ -126,7 +127,8 @@ a
 }
 
 
-.page-portfolio .header-nav-a[href="portfolio.html"]::after {
+.page-portfolio .header-nav-a[href="portfolio.html"]::after 
+{
    content: "";
     display: flex;
     justify-content: center;
@@ -138,6 +140,18 @@ a
     margin-bottom: 0px;
     margin-left: auto;
     margin-right: auto;
+    animation: appear 0.5s ease forwards;
+}
+
+@keyframes appear {
+    0% {
+        width: 0;
+        opacity: 0;
+    }
+    100% {
+        width: 48px;
+        opacity: 1;
+    }
 }
 
 .main-section1-h1
@@ -667,6 +681,34 @@ ul
    top: 175px;
 }
 
+.overlay-div
+{
+    width: 370px;
+    height: 294px;
+    background-color:#2196F3E5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    opacity: 0;
+}
+
+.overlay-div:hover
+{
+    opacity: 1;
+}
+
+.overlay-text
+{
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 3%;
+    color: var(--webstudio-text-all-white);
+    width: 322px;
+    height: 168px;
+}
 
 .label-inline:nth-of-type(3) svg 
 {
