--- a/Web Studio/style.css
+++ b/Web Studio/style.css
@@ -11,6 +11,7 @@
     --svg-color: #AFB1B8;
 }
 
+
 button
 {
     background-color: var(--mainblue-color);
@@ -457,6 +458,8 @@ ul
     color: var(--a-footer-color);
 }
 
+
+
 .portfolio-main-h2
 {
 
@@ -712,13 +715,43 @@ ul
     justify-content: center;
     align-items: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     opacity: 0;
 }
 
-.overlay-div:hover
+@keyframes overlay-portfolio 
 {
-    opacity: 1;
+    from {
+      transform: translate(-50%, 50%); 
+      opacity: 0;
+    }
+    to {
+      transform: translate(-50%, -50%); 
+      opacity: 1;
+    }
 }
+
+.item:hover .overlay-div
+{
+    animation-name: overlay-portfolio;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: both;
+}
+
+.overlay-div-box 
+{
+    position: absolute; 
+    overflow: hidden;   
+    width: 370px;
+    height: 294px;
+    top: 41.75%;
+    left: 50%;
+    transform: translate(-50%, -58.25%);
+}
+
 
 .overlay-text
 {
@@ -730,11 +763,11 @@ ul
     color: var(--webstudio-text-all-white);
     width: 322px;
     height: 168px;
+    pointer-events: none;
 }
 
 .label-inline:nth-of-type(3) svg 
 {
-    
     top: 246px;
 }
 
@@ -1027,6 +1060,7 @@ ul
 
     box-shadow: 0px 1px 1px 0px #0000001F;
     
+    position: relative;
 
 }
 
